--- a/app/src/main/res/layout/reports_item_file.xml
+++ b/app/src/main/res/layout/reports_item_file.xml
@@ -33,6 +33,7 @@
                     android:textSize="@dimen/_15ssp"
                     android:textStyle="bold" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -178,6 +179,21 @@
                         android:text="note"
                         android:textSize="@dimen/_15ssp" />
                 </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="right">
+
+                <ImageView
+                    android:id="@+id/imgDelete"
+                    android:layout_width="@dimen/_50sdp"
+                    android:layout_height="@dimen/_50sdp"
+                    android:background="@drawable/efect"
+                    android:layout_marginHorizontal="@dimen/_5sdp"
+                    android:padding="@dimen/_10sdp"
+                    android:src="@drawable/delete" />
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
